# zephyr-linker-issue

./: CMakeLists.txt
src/: main.c
